<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.weatherapp.setting.setting_Fragment">

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="415dp"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:orientation="horizontal"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
  >

        <RelativeLayout
            android:id="@+id/relativ1"
            android:layout_width="195dp"
            android:layout_height="177dp"
            android:layout_margin="10dp"

            android:background="@drawable/shape1">

            <TextView
                android:id="@+id/location"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location"
                android:layout_margin="14dp"

                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/gps"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="9dp"
                    android:textSize="20sp"
                    android:text="@string/gps" />

                <RadioButton
                    android:layout_width="92dp"
                    android:layout_height="30dp"
                    android:layout_margin="9dp"
                    android:text="@string/map"
                    android:id="@+id/map"
                    android:textSize="20sp"/>

            </RadioGroup>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativ2"
            android:layout_width="182dp"
            android:layout_height="181dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape1">

            <TextView
                android:id="@+id/language"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/language"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/language"

                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="14dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_margin="9dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/english"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/arabic"

                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:layout_margin="5dp"
                    android:text="@string/arabic"
                    android:textSize="20sp" />

            </RadioGroup>



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativ3"
            android:layout_width="195dp"
            android:layout_height="210dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape1">

            <TextView
                android:id="@+id/Temperature"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/temperature"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Temperature"
                android:layout_margin="14dp"

                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="9dp"
                    android:id="@+id/celsius"

                    android:text="@string/celsius"

                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    android:layout_margin="9dp"
                    android:text="@string/kelvin"
                    android:id="@+id/kelvin"

                    android:textSize="20sp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="9dp"
                    android:text="@string/fahrenheit"
                    android:id="@+id/fahrenheit"

                    android:textSize="20sp" />
            </RadioGroup>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativ4"
            android:layout_width="183dp"
            android:layout_height="177dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape1">

            <TextView
                android:id="@+id/windspeed"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/windspeed"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="169dp"
                android:layout_height="99dp"
                android:layout_below="@+id/windspeed"

                android:layout_marginStart="14dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="14dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/meter_second"

                    android:layout_width="155dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="9dp"

                    android:text="@string/meter_second"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="155dp"
                    android:layout_height="35dp"
                    android:layout_margin="9dp"
                    android:text="@string/mile_hour"
                    android:id="@+id/mile_hour"
                    android:textSize="20sp" />

            </RadioGroup>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativ5"
            android:layout_width="182dp"
            android:layout_height="181dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape1">

            <TextView
                android:id="@+id/notification"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/notification"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="117dp"
                android:layout_below="@+id/notification"

                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="14dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_margin="9dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Eanble"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="118dp"
                    android:layout_height="38dp"
                    android:layout_margin="5dp"
                    android:text="@string/disable"
                    android:textSize="20sp" />

            </RadioGroup>


        </RelativeLayout>







    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>