<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.weatherapp.initalSetting" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dilog.UserDilogFragment"
        android:background="#fff">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="#FF74B2CF"

            android:layout_margin="10dp"
            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/shape"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/setting_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_baseline_settings_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/setting" />



                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:gravity="center"
                    android:src="@drawable/ic_baseline_settings_24"
                    android:text="@string/initialSetup"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"


                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="14dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_margin="9dp"
                        android:text="@string/map"
                        android:textSize="20sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/initalnitifiacte"
                    android:layout_width="169dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="124dp"
                    android:layout_marginEnd="156dp"
                    android:gravity="center"
                    android:src="@drawable/ic_baseline_settings_24"
                    android:text="@string/notification"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ToggleButton
                    android:id="@+id/toggleButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.699"
                    app:layout_constraintStart_toEndOf="@+id/initalnitifiacte"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="116dp"
                    android:background="@drawable/shape"
                    android:text="@string/ok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.223"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/initalnitifiacte" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>