<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    tools:context=".MainActivity">
    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mapfragmentContainer"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:padding="16dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="391dp"
            android:layout_height="240dp"
            android:layout_margin="10dp"
            android:layout_marginTop="260dp"

            app:cardBackgroundColor="#B0279E"

            app:cardCornerRadius="24dp"
            app:cardElevation="3dp"
            app:cardMaxElevation="12dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--            <ImageView-->
            <!--                android:id="@+id/setting_icon"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="12dp"-->
            <!--                android:layout_marginEnd="12dp"-->
            <!--                android:contentDescription="@string/setting"-->
            <!--                android:src="@drawable/ic_baseline_settings_24"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->


            <TextView
                android:id="@+id/textView2"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginTop="57dp"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:gravity="center"
                android:src="@drawable/ic_baseline_settings_24"
                android:text="@string/initialSetup"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="177dp"
                android:layout_height="50dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="56dp"


                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <RadioButton
                    android:id="@+id/map_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:text="@string/map" />

                <RadioButton
                    android:id="@+id/gps_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:text="@string/gps" />


            </RadioGroup>

            <TextView
                android:id="@+id/initalnitifiacte"
                android:layout_width="169dp"
                android:layout_height="37dp"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="156dp"
                android:gravity="center"
                android:src="@drawable/ic_baseline_settings_24"
                android:text="@string/notification"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:layout_marginTop="113dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.699"
                app:layout_constraintStart_toEndOf="@+id/initalnitifiacte"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/shape"
                android:text="@string/ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.223"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/initalnitifiacte" />

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
